<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/authFragment">

    <!-- Auth Fragment -->
    <fragment
        android:id="@+id/authFragment"
        android:name="com.isetr.cupcake.ui.auth.AuthFragment"
        android:label="@string/login"
        tools:layout="@layout/activity_auth">
        <action
            android:id="@+id/action_authFragment_to_introVideoFragment"
            app:destination="@id/introVideoFragment" />
    </fragment>

    <!-- Cart Fragment -->
    <fragment
        android:id="@+id/cartFragment"
        android:name="com.isetr.cupcake.ui.cart.CartFragment"
        android:label="@string/cart"
        tools:layout="@layout/fragment_cart" />

    <!-- Intro Video Fragment -->
    <fragment
        android:id="@+id/introVideoFragment"
        android:name="com.isetr.cupcake.ui.intro.IntroVideoFragment"
        android:label="Intro Video"
        tools:layout="@layout/fragment_intro_video">
        <argument
            android:name="nom"
            app:argType="string" />
        <argument
            android:name="prenom"
            app:argType="string" />
        <action
            android:id="@+id/action_introVideoFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment"
            app:popUpTo="@+id/authFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <!-- Welcome Fragment -->
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.isetr.cupcake.ui.welcome.WelcomeFragment"
        android:label="@string/welcome"
        tools:layout="@layout/activity_welcome">
        <argument
            android:name="nom"
            app:argType="string" />
        <argument
            android:name="prenom"
            app:argType="string" />
        <action
            android:id="@+id/action_welcomeFragment_to_pastryProductsFragment"
            app:destination="@id/pastryProductsFragment" />
        <action
            android:id="@+id/action_welcomeFragment_to_accountFragment"
            app:destination="@id/accountFragment" />
        <action
            android:id="@+id/action_welcomeFragment_to_authFragment"
            app:destination="@id/authFragment"
            app:popUpTo="@+id/welcomeFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <!-- Account Fragment -->
    <fragment
        android:id="@+id/accountFragment"
        android:name="com.isetr.cupcake.ui.account.AccountFragment"
        android:label="@string/moncompte"
        tools:layout="@layout/activity_account">
        <action
            android:id="@+id/action_accountFragment_to_authFragment"
            app:destination="@id/authFragment"
            app:popUpTo="@+id/welcomeFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <!-- Pastry Products Fragment -->
    <fragment
        android:id="@+id/pastryProductsFragment"
        android:name="com.isetr.cupcake.ui.products.PastryProductsFragment"
        android:label="@string/pastryProdcut"
        tools:layout="@layout/activity_pastry_prodcuts" />

    <!-- Global Actions for Footer Navigation -->
    <action
        android:id="@+id/action_global_pastryProducts"
        app:destination="@id/pastryProductsFragment" />

    <action
        android:id="@+id/action_global_account"
        app:destination="@id/accountFragment" />

    <action
        android:id="@+id/action_global_cart"
        app:destination="@id/cartFragment" />

</navigation>
